colors and alignment - fix

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -46,10 +46,10 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        
+        margin: 0 auto;
+
         @media (max-width: $mobile-breakingpoint) {
             width: 90%;
-            margin: 0 auto;
         }
 
         .line {
@@ -58,13 +58,13 @@
             align-items: center;
             width: 100%;
             max-width: 455px;
-            justify-content: space-around;
+            justify-content: center;
 
             .line--dash {
                 background-color: #361979;
                 width: 100%;
                 height: 1.3px;
-                margin: 0 15px;
+                max-width: 130px;
             }
         }
 
@@ -74,9 +74,16 @@
             letter-spacing: 0.5rem;
         }
 
-
+        h1{
+            width: 100%;
+        }
+        
         h3 {
             font-size: $font-size-medium;
+       
+            &.line--initials{
+                margin: 20px 10px;
+            }
         }
     }
 }
