--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -159,6 +159,7 @@
         a {
             text-decoration: none;
             margin: 0 0.7rem;
+            color: $blue;
         }
     }
 }
