--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -244,7 +244,6 @@
                     border: none;
                     border-radius: 50%;
                     padding-bottom: 10px;
-                    margin-right: 10px;
 
                     @media (max-width: $menu-breakingpoint) {
                         max-width: 230px;
